kubernetes/n8n-main-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: n8n-main
  namespace: n8n
  labels:
    app: n8n-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-main
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: n8n-main
    spec:
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: 5678
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          terminationMessagePath: /dev/termination-log
          name: n8n-main
          command:
            - n8n
          livenessProbe:
            httpGet:
              path: /healthz/liveness
              port: 5678
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 5
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: 'quay.nextsysadmin.local:8443/app/n8n:v3-nightly'
          args:
            - start
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
