kubernetes/n8n-worker-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: n8n-worker
  namespace: n8n
  labels:
    app: n8n-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: n8n-worker
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: n8n-worker
      annotations:
        openshift.openshift.io/restartedAt: '2026-09-03T07:25:57.789Z'
    spec:
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - sh
                - '-c'
                - pgrep -f "n8n worker"
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: n8n-worker
          command:
            - n8n
            - worker
          livenessProbe:
            exec:
              command:
                - sh
                - '-c'
                - pgrep -f "n8n worker"
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: 'quay.nextsysadmin.local:8443/app/n8n:v3-nightly'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
