kubernetes/redis-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  namespace: n8n
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
    spec:
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-data
      containers:
        - resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          readinessProbe:
            exec:
              command:
                - sh
                - '-c'
                - redis-cli -a "$REDIS_PASSWORD" ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: redis
          command:
            - redis-server
          livenessProbe:
            exec:
              command:
                - sh
                - '-c'
                - redis-cli -a "$REDIS_PASSWORD" ping
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: redis-storage
              mountPath: /data
          terminationMessagePolicy: File
          image: 'quay.nextsysadmin.local:8443/app/redis:latest'
          args:
            - '--appendonly'
            - 'yes'
            - '--requirepass'
            - $(REDIS_PASSWORD)
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
