kubernetes/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    app: n8n-main
spec:
  type: ClusterIP
  selector:
    app: n8n-main
  ports:
    - name: http
      port: 80
      targetPort: 5678
