kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: n8n
  labels:
    app: n8n
spec:
  host: n8n-n8n.apps.ocp.nextsysadmin.local
  to:
    kind: Service
    name: n8n
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
